--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,8 @@ language: node_js
 node_js:
   - 10.15.3
 
-cache:
-  yarn: true
-  directories:
-    - node_modules
-
-before_install:
-  - if [[ `npm -v` != 6* ]]; then npm install -g npm@6; fi
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.17.3
-  - export PATH="$HOME/.yarn/bin:$PATH"
-
 install:
-  - yarn install --frozen-lockfile
+  - npm install
 
 addons:
   apt:
@@ -53,6 +43,7 @@ services:
   - mongodb
 
 script:
-  - yarn lint
-  - yarn test
+  - npm run lint
+  - npm test
+  - npm audit --registry=https://registry.npmjs.org --production
   - ./artifact.sh
